fixed the layout, adjusted the font size and icon alignment

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -63,6 +63,9 @@
   color: white;
   border: solid white 1px;
   border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn-filter{
